--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,14 @@
+amqp==1.4.9
+anyjson==0.3.3
 asgiref==3.4.1
+billiard==3.3.0.23
+celery==3.1.26.post2
 Django==3.2.5
+django-celery==3.3.1
+django-rest-auth==0.9.5
 djangorestframework==3.12.4
+kombu==3.0.37
 pytz==2021.1
+six==1.16.0
 sqlparse==0.4.1
 typing-extensions==3.10.0.0
