--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,31 @@
-amqp==1.4.9
+amqp==5.0.6
 anyjson==0.3.3
 asgiref==3.4.1
-billiard==3.3.0.23
-celery==3.1.26.post2
+billiard==3.6.4.0
+cached-property==1.5.2
+celery==5.1.2
+click==7.1.2
+click-didyoumean==0.0.3
+click-plugins==1.1.1
+click-repl==0.2.0
 Django==3.2.5
 django-celery==3.3.1
+django-celery-results==2.2.0
+django-redis==5.0.0
 django-rest-auth==0.9.5
 djangorestframework==3.12.4
-kombu==3.0.37
+dnspython==1.16.0
+eventlet==0.31.0
+greenlet==1.1.0
+importlib-metadata==4.6.1
+kombu==5.1.0
+prompt-toolkit==3.0.3
+psycopg2==2.9.1
 pytz==2021.1
+redis==3.5.3
 six==1.16.0
 sqlparse==0.4.1
 typing-extensions==3.10.0.0
+vine==5.0.0
+wcwidth==0.2.5
+zipp==3.5.0
