--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,13 @@
 amqp==5.0.6
 anyjson==0.3.3
 asgiref==3.4.1
+beautifulsoup4==4.9.3
 billiard==3.6.4.0
+bs4==0.0.1
 cached-property==1.5.2
 celery==5.1.2
+certifi==2021.5.30
+charset-normalizer==2.0.3
 click==7.1.2
 click-didyoumean==0.0.3
 click-plugins==1.1.1
@@ -17,15 +21,20 @@ djangorestframework==3.12.4
 dnspython==1.16.0
 eventlet==0.31.0
 greenlet==1.1.0
+idna==3.2
 importlib-metadata==4.6.1
 kombu==5.1.0
+lxml==4.6.3
 prompt-toolkit==3.0.3
 psycopg2==2.9.1
 pytz==2021.1
 redis==3.5.3
+requests==2.26.0
 six==1.16.0
+soupsieve==2.2.1
 sqlparse==0.4.1
 typing-extensions==3.10.0.0
+urllib3==1.26.6
 vine==5.0.0
 wcwidth==0.2.5
 zipp==3.5.0
