--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 amqp==5.0.6
 anyjson==0.3.3
+arrow==0.14.7
 asgiref==3.4.1
 beautifulsoup4==4.9.3
 billiard==3.6.4.0
@@ -21,18 +22,21 @@ djangorestframework==3.12.4
 dnspython==1.16.0
 eventlet==0.31.0
 greenlet==1.1.0
+ics==0.7
 idna==3.2
 importlib-metadata==4.6.1
 kombu==5.1.0
 lxml==4.6.3
 prompt-toolkit==3.0.3
 psycopg2==2.9.1
+python-dateutil==2.8.2
 pytz==2021.1
 redis==3.5.3
 requests==2.26.0
 six==1.16.0
 soupsieve==2.2.1
 sqlparse==0.4.1
+TatSu==4.4.0
 typing-extensions==3.10.0.0
 urllib3==1.26.6
 vine==5.0.0
