--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,17 +2,39 @@ version: "3"
 
 
 services:
+  web:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    container_name: django_web
+    volumes:
+      - .:/src
+    ports:
+      - "8000:8000"
+    depends_on:
+      - db
+      - redis
+    env_file:
+      - keys.txt
+    command: ["sh", "-c", "python3 manage.py migrate&&python3 manage.py runserver 0.0.0.0:8000"]
 
   db:
     image: postgres:latest
     env_file:
       - keys.txt
-    ports:
-      - "5432:5432"
-    restart: always
 
-  cache:
+  redis:
     image: redis:latest
-    ports:
-      - "6379:6379"
-    restart: always
+
+  celery:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    container_name: worker
+    volumes:
+      - .:/src
+    depends_on:
+      - redis
+    env_file:
+      - keys.txt
+    command: ["sh", "-c", "celery -A django_calendar worker -c 5 -l info"]
