--- a/requirements.txt
+++ b/requirements.txt
@@ -30,7 +30,7 @@ importlib-metadata==4.6.1
 kombu==5.1.0
 lxml==4.6.3
 prompt-toolkit==3.0.3
-psycopg2==2.9.1
+psycopg2-binary==2.8.6
 python-crontab==2.5.1
 python-dateutil==2.8.2
 pytz==2021.1
